--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"cross-env": "^3.2.4",
 		"css-loader": "^0.28.9",
 		"extract-text-webpack-plugin": "^3.0.2",
+		"glob": "^7.1.2",
 		"style-loader": "^0.20.1",
 		"webpack": "^3.10.0"
 	},
